--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 				<svg class="loading" width="16" height="16" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" style="height: auto;">
 					<circle cx="50" cy="50" r="43" stroke-dasharray="213.62830044410595 53.40707511102647" stroke="#888" fill="none" stroke-width="12"></circle>
 				</svg>
-				<span class="wat">?</span>
+				<span class="wat">Help</span>
 			</div>
 		</header>
 
