add disabled javascript warning

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,13 @@
 		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body>
+		<noscript>
+			<div class="message">
+				<h2>Uh oh! 😳</h2>
+				<p>It looks like you have JavaScript disabled in your browser, and sadly this website requires it to operate. Please enable JavaScript and try again.</p>
+			</div>
+		</noscript>
+
 		<header>
 			<input placeholder="Username" autocomplete="off" autofocus>
 			<div class="actions">
