better error handling when fetch fails

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,12 +17,13 @@
 		<header>
 			<input placeholder="Username" autocomplete="off" autofocus>
 			<div class="actions">
-				<span class="search">Search</span>
-				<span class="reset">Reset Map</span>
+				<span class="search action">Search</span>
+				<span class="reset action">Reset Map</span>
 				<svg class="loading" width="16" height="16" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" style="height: auto;">
 					<circle cx="50" cy="50" r="43" stroke-dasharray="213.62830044410595 53.40707511102647" stroke="#888" fill="none" stroke-width="12"></circle>
 				</svg>
-				<span class="wat">Help</span>
+				<span class="error"></span>
+				<span class="wat action">Help</span>
 			</div>
 		</header>
 
