lighthouse yelled at me for these

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<title>VSCO Map</title>
 		<meta charset='utf-8'>
@@ -15,7 +15,7 @@
 		</noscript>
 
 		<header>
-			<input placeholder="Username" autocomplete="off" autofocus>
+			<input placeholder="Username" autocomplete="off" autofocus aria-label="Username">
 			<div class="actions">
 				<span class="search action">Search</span>
 				<span class="reset action">Reset Map</span>
